--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,23 +27,23 @@ const description =
   </section>
 
   <!-- Features Section -->
-  <section id="features-section" class="section py-28">
+  <!-- <section id="features-section" class="section py-28">
     <div class="container">
       <Features />
     </div>
-  </section>
+  </section> -->
 
   <!-- Testimonials Section -->
-  <section id="testimonials-section" class="section py-28">
+  <!-- <section id="testimonials-section" class="section py-28">
     <div class="container">
       <Testimonials />
     </div>
-  </section>
+  </section> -->
 
   <!-- CallToAction Section -->
-  <section id="cta-section" class="section py-14 mb-14">
+  <!-- <section id="cta-section" class="section py-14 mb-14">
     <div class="container">
       <CallToAction />
     </div>
-  </section>
+  </section> -->
 </Base>
