--- a/src/layouts/partials/BaseHead.astro
+++ b/src/layouts/partials/BaseHead.astro
@@ -32,7 +32,7 @@ const pageImage = `${config.site.base_url}${
 <!-- favicon -->
 <link rel="shortcut icon" href={config.site.favicon} />
 <!-- theme meta -->
-<meta name="theme-name" content="haitang" />
+<meta name="theme-name" content="someName" />
 <meta name="msapplication-TileColor" content="#000000" />
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff" />
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000" />
