--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,11 @@ import { Playa } from "../components/remotion/Playa";
 
 export const prerender = false;
 
-const title = "海棠诗社";
-const meta_title = "海棠诗社";
+const title = "hello world";
+const meta_title = "rem-astro";
 const description =
-  "海棠诗社，古诗词的数字桃源。" +
-  "海棠诗社按诗集、朝代、诗人、诗词等方式检索，内容丰富，信息齐全。" +
-  "海棠诗社按选集、主题、节日、节气、词牌、时令、地理等方式精选分类。" +
-  "海棠诗社全站响应式布局，兼容移动端，支持暗黑模式，响应速度快。";
+  "some of this" +
+  "some of that" 
 ---
 
 <Base title={title} meta_title={meta_title} description={description}>
@@ -25,7 +23,7 @@ const description =
       <HeroLanding />
     </div>
   </section>
-
+  
   <!-- Features Section -->
   <!-- <section id="features-section" class="section py-28">
     <div class="container">
