--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -45,7 +45,7 @@ if (Astro.request.method === "POST") {
     <input class="text-primary dark:text-primary-foreground py-4 px-2 rounded-md" type="email" name="email" required placeholder="email address" />
     <button>Sign in</button>
   </form>
-  <h1 class="mt-12">Don't have an account yet ? <a class="hover:text-blue-200" href="/magicLink/signup">Sign Up instead</a></h1>
+  <h1 class="mt-12">Don't have an account yet ? <a class="hover:text-blue-200" href="/signup">Sign Up instead</a></h1>
 </div>
   
   </Base>
