--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -15,7 +15,7 @@ import Base from "@/layouts/Base.astro";---
 			</label>
 			<button>Sign Up</button>
 		</form>
-		<h1 class="mt-12">Have an account already ? <a class="hover:text-blue-200" href="/magicLink/login">Login instead</a></h1>
+		<h1 class="mt-12">Have an account already ? <a class="hover:text-blue-200" href="/login">Login instead</a></h1>
 
 	</div>
 </Base>
