--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -371,7 +371,7 @@ const lang = getLang(Astro.url.pathname);
                 class="rounded-lg text-sm p-2.5 inline-flex items-center hover:bg-gray-200 dark:hover:bg-gray-800"
                 aria-label="Github"
                 target="_blank"
-                href="https://github.com/javayhu/haitang"
+                href="https://github.com/rayBlock/rem-astro"
               >
                 <Icon
                   name="tabler:brand-github"
