--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -24,7 +24,9 @@ const { header1, header2, sub, text } = test.data[lang];
   <section class="section px-4 pt-0 pb-0 my-14 mx-auto">
     <div class="container">
       <div class="row justify-center mb-14">
-        <Image src={'/images/flowa05.png'} alt="flower logo image" width="120" height="120" />
+        <Image style={{
+          width: "120px",
+        }} src={'/images/flowa05.png'} alt="flower logo image" width="120" height="120" />
       </div>
       <div class="text-center">
         <PageHeader title={header1} />
